# libei

./: Makefile.am  acinclude.m4  bootstrap.sh  ci.sh  configure.ac  ei.pc.in  erlang.m4  erlang.sh  notes.txt
