#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT(libei, 26.0.2, packages@2600hz.com, libei)
AM_INIT_AUTOMAKE
#LT_INIT

#AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
#AC_PROG_CC

# Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS([float.h stdint.h stdlib.h string.h])

CHECK_ERLANG

AC_CONFIG_FILES([Makefile
	ei.pc])

AC_OUTPUT
